--- a/index.html
+++ b/index.html
@@ -10,8 +10,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" rel="stylesheet" />
 
     <style>
-        /* =============== (All your existing styles stay the same) =============== */
-        :root {
+        :root { 
             --bg: #050810;
             --card-bg: rgba(255, 255, 255, 0.05);
             --accent: #4da3ff;
@@ -470,7 +469,7 @@
             transform: scale(1.05);
         }
 
-        /* =============== REUSABLE SKILL MODAL =============== */
+        /* MODAL */
         .skill-modal {
             position: fixed;
             top: 0;
@@ -561,21 +560,53 @@
             border: 1px solid rgba(255, 255, 255, 0.05);
             max-height: 60vh;
         }
+
+        .modal-footer {
+            padding: 16px 24px;
+            text-align: right;
+            border-top: 1px solid rgba(255, 255, 255, 0.08);
+        }
+
+        #read-btn, #download-btn {
+            border: none;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-weight: 600;
+            cursor: pointer;
+            font-size: 0.95rem;
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            transition: 0.2s;
+            margin-left: 10px;
+        }
+
+        #read-btn {
+            background: #6c757d;
+            color: white;
+        }
+
+        #read-btn:hover {
+            background: #5a6268;
+            transform: scale(1.03);
+        }
+
+        #download-btn {
+            background: #28a745;
+            color: white;
+        }
+
+        #download-btn:hover {
+            background: #218838;
+            transform: scale(1.03);
+        }
     </style>
 </head>
 
 <body>
-    <!-- Admin Panel -->
-    <div id="admin-panel">
-        <button class="admin-btn" onclick="addProject()">✚ Add Project</button>
-        <button class="admin-btn" onclick="addContactLink()">✚ Add Link</button>
-        <button class="admin-btn" onclick="addSkill()">✚ Add Skill</button>
-        <button class="admin-btn" style="background:#ff4d4d;" onclick="exitEditMode()">✕ Exit</button>
-    </div>
-
     <header>
         <nav>
-            <a href="#home" class="logo">Abdelbasset Mezaourou </a>
+            <a href="#home" class="logo">Abdelbasset Mezaourou</a>
             <ul>
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
@@ -588,7 +619,7 @@
 
     <section id="home">
         <div class="hero-text">
-            <h1>Hi, I'm <span> Mr.Mezaourou </span></h1>
+            <h1>Hi, I'm <span>Mr. Mezaourou</span></h1>
             <div id="typing"></div>
 
             <div class="socials">
@@ -665,10 +696,11 @@
                 </a>
             </div>
 
-            <form class="contact-form">
-                <input type="text" placeholder="Your Name" required />
-                <input type="email" placeholder="Your Email" required />
-                <textarea placeholder="Your Message" rows="6" required></textarea>
+            <!-- ✅ FORMSPREE CONTACT FORM -->
+            <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+                <input type="text" name="name" placeholder="Your Name" required />
+                <input type="email" name="email" placeholder="Your Email" required />
+                <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
                 <button type="submit" class="send-btn">Send Message</button>
             </form>
         </div>
@@ -676,40 +708,38 @@
 
     <div id="copy-toast">Link Copied!</div>
 
-    <!-- Reusable Modal (one for all skills) -->
+    <!-- Enhanced Skill Modal -->
     <div id="skill-modal" class="skill-modal">
         <div class="modal-content">
             <div class="modal-header">
-                <h3 id="modal-skill-title"><i class="fas fa-code"></i> Skill Code</h3>
+                <h3 id="modal-skill-title"><i class="fas fa-code"></i> Skill Files</h3>
                 <button class="close-modal">&times;</button>
             </div>
             <div class="modal-body">
-                <pre><code id="modal-code" class="code-block">Loading...</code></pre>
+                <!-- File List -->
+                <div id="file-list">
+                    <p>Select a file to view or download:</p>
+                    <div id="files-container"></div>
+                </div>
+                <!-- File Content -->
+                <div id="file-content" style="display: none;">
+                    <pre><code id="modal-code" class="code-block">Loading...</code></pre>
+                </div>
+            </div>
+            <div class="modal-footer">
+                <button id="read-btn" style="display: none;"><i class="fas fa-eye"></i> Read File</button>
+                <button id="download-btn" style="display: none;"><i class="fas fa-download"></i> Download File</button>
             </div>
         </div>
     </div>
 
     <footer>
-        <p>© 2025 Abdelbasset Mezaourou • </p>
+        <p>© 2025 Abdelbasset Mezaourou</p>
     </footer>
 
     <script>
-        // === ADMIN MODE ===
-        let editMode = false;
-        document.addEventListener('keydown', (e) => {
-            if (e.shiftKey && e.key === 'E') {
-                editMode = !editMode;
-                document.getElementById('admin-panel').style.display = editMode ? 'flex' : 'none';
-            }
-        });
-
-        function exitEditMode() {
-            editMode = false;
-            document.getElementById('admin-panel').style.display = 'none';
-        }
-
-        // === DATA STORAGE ===
-        let projects = JSON.parse(localStorage.getItem('projects')) || [
+        // === DATA ===
+        let projects = [
             {
                 title: "Smart Home Automation System",
                 desc: "Built a Wi-Fi-controlled home lighting & climate system using ESP32 and Firebase. Integrated voice commands via Android app and real-time monitoring dashboard."
@@ -720,57 +750,42 @@
             }
         ];
 
-        let contactLinks = JSON.parse(localStorage.getItem('contactLinks')) || [];
-        
-        // ✅ NEW: Skills data
-        let skills = JSON.parse(localStorage.getItem('skills')) || [
-            { name: "C / C++", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/Smart-Home-Automation/main/ESP32_Controller.ino" },
-            { name: "Java", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/University-Course-Scheduler/main/App.java" },
-            { name: "HTML & CSS", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/Portfolio/main/index.html" },
-            { name: "JavaScript", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/Portfolio/main/script.js" },
-            { name: "Algorithms & Data Structures", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/DSA/main/linked_list.c" },
-            { name: "Arduino / Robotics", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/RobotArm/main/robot_arm.ino" },
-            { name: "Cybersecurity Basics", fileUrl: "https://raw.githubusercontent.com/BassetMezaourou/CyberNotes/main/nmap_cheatsheet.txt" }
+        let skills = [
+            {
+                name: "C language",
+                files: [
+                    { name: "Function", url: "https://raw.githubusercontent.com/BassetMezaourou/AbdelbassetMezaourou.github.io/refs/heads/main/function.txt", type: "txt" },
+                ]
+            },
+            {
+                name: "Java",
+                files: []
+            },
+            {
+                name: "HTML & CSS",
+                files: []
+            },
+            {
+                name: "JavaScript",
+                files: []
+            },
+            {
+                name: "Algorithms & Data Structures",
+                files: []
+            },
+            {
+                name: "Arduino / Robotics",
+                files: []
+            },
+            {
+                name: "Cybersecurity Basics",
+                files: []
+            }
         ];
 
-        function saveData() {
-            localStorage.setItem('projects', JSON.stringify(projects));
-            localStorage.setItem('contactLinks', JSON.stringify(contactLinks));
-            localStorage.setItem('skills', JSON.stringify(skills)); // ✅ Save skills
-            renderProjects();
-            renderContactLinks();
-            renderSkills();
-        }
-
-        // === ADD FUNCTIONS ===
-        function addProject() {
-            const title = prompt("Project title:");
-            const desc = prompt("Project description:");
-            if (title && desc) {
-                projects.push({ title, desc });
-                saveData();
-            }
-        }
-
-        function addContactLink() {
-            const label = prompt("Link label (e.g., 'YouTube'):");
-            const url = prompt("Full URL:");
-            const icon = prompt("Font Awesome icon class (e.g., fab fa-youtube):");
-            if (label && url && icon) {
-                contactLinks.push({ label, url, icon });
-                saveData();
-            }
-        }
-
-        // ✅ NEW: Add Skill
-        function addSkill() {
-            const name = prompt("Skill name (e.g., Python):");
-            const fileUrl = prompt("Public file URL (GitHub raw link):");
-            if (name && fileUrl) {
-                skills.push({ name, fileUrl });
-                saveData();
-            }
-        }
+        // === STATE ===
+        let currentFileUrl = '';
+        let currentFileName = '';
 
         // === RENDERERS ===
         function renderProjects() {
@@ -784,22 +799,6 @@
             });
         }
 
-        function renderContactLinks() {
-            const container = document.querySelector('.contact-info');
-            const staticLinks = container.querySelectorAll('.static-link');
-            container.innerHTML = '';
-            staticLinks.forEach(link => container.appendChild(link));
-            contactLinks.forEach(link => {
-                const el = document.createElement('a');
-                el.href = link.url.trim();
-                el.target = '_blank';
-                el.className = 'info-item';
-                el.innerHTML = `<i class="${link.icon}"></i><span>${link.label}</span>`;
-                container.appendChild(el);
-            });
-        }
-
-        // ✅ NEW: Render Skills
         function renderSkills() {
             const container = document.getElementById('skills-container');
             container.innerHTML = '';
@@ -807,9 +806,7 @@
                 const pill = document.createElement('div');
                 pill.className = 'skill-pill';
                 pill.textContent = skill.name;
-                pill.dataset.fileUrl = skill.fileUrl;
-                pill.dataset.name = skill.name;
-                pill.addEventListener('click', openSkillModal);
+                pill.addEventListener('click', () => openSkillModal(skill));
                 container.appendChild(pill);
             });
         }
@@ -842,7 +839,7 @@
             setTimeout(type, speed);
         }
 
-        // === MODERN SCROLL REVEAL ===
+        // === SCROLL REVEAL ===
         const observer = new IntersectionObserver((entries) => {
             entries.forEach(entry => {
                 if (entry.isIntersecting) {
@@ -867,25 +864,78 @@
             }
         }
 
-        // ✅ NEW: Reusable Skill Modal
-        function openSkillModal(e) {
-            const skillName = e.target.dataset.name;
-            const fileUrl = e.target.dataset.fileUrl;
+        // === MODAL LOGIC ===
+        function openSkillModal(skill) {
             const modal = document.getElementById('skill-modal');
             const titleEl = document.getElementById('modal-skill-title');
-            const codeEl = document.getElementById('modal-code');
+            const fileList = document.getElementById('file-list');
+            const fileContent = document.getElementById('file-content');
+            const filesContainer = document.getElementById('files-container');
+            const readBtn = document.getElementById('read-btn');
+            const downloadBtn = document.getElementById('download-btn');
 
-            titleEl.innerHTML = `<i class="fas fa-code"></i> ${skillName} Code`;
-            codeEl.textContent = 'Loading...';
-            modal.classList.add('active');
+            titleEl.innerHTML = `<i class="fas fa-code"></i> ${skill.name} Files`;
 
-            fetch(fileUrl)
-                .then(res => res.ok ? res.text() : Promise.reject('File not found'))
-                .then(content => codeEl.textContent = content)
-                .catch(err => {
-                    codeEl.textContent = `❌ Error loading file:\n${err}\n\n💡 Tip: Use a public GitHub raw URL.`;
-                    console.error(err);
+            // Reset UI
+            fileList.style.display = 'block';
+            fileContent.style.display = 'none';
+            readBtn.style.display = 'none';
+            downloadBtn.style.display = 'none';
+            filesContainer.innerHTML = '';
+
+            // Render files
+            skill.files.forEach(file => {
+                const fileItem = document.createElement('div');
+                fileItem.style = `
+                    background: rgba(255,255,255,0.05);
+                    padding: 12px;
+                    margin: 8px 0;
+                    border-radius: 8px;
+                    cursor: pointer;
+                    transition: background 0.2s;
+                    display: flex;
+                    align-items: center;
+                    gap: 12px;
+                    border: 1px solid rgba(255,255,255,0.08);
+                `;
+
+                // Icon by file type
+                let iconClass = 'fa-file';
+                if (['c', 'ino', 'java', 'js', 'html', 'css'].includes(file.type)) iconClass = 'fa-code';
+                else if (['txt', 'md'].includes(file.type)) iconClass = 'fa-file-alt';
+
+                fileItem.innerHTML = `
+                    <i class="fas ${iconClass}" style="color: var(--accent); font-size: 1.2rem;"></i>
+                    <span style="flex: 1; word-break: break-all;">${file.name}</span>
+                    <i class="fas fa-chevron-right" style="font-size: 0.9rem; color: var(--text-dim);"></i>
+                `;
+
+                fileItem.addEventListener('click', () => {
+                    currentFileUrl = file.url;
+                    currentFileName = file.name;
+
+                    // Show content area
+                    fileList.style.display = 'none';
+                    fileContent.style.display = 'block';
+                    readBtn.style.display = 'inline-flex';
+                    downloadBtn.style.display = 'inline-flex';
+
+                    // Load content
+                    const codeEl = document.getElementById('modal-code');
+                    codeEl.textContent = 'Loading...';
+                    fetch(currentFileUrl)
+                        .then(res => res.ok ? res.text() : Promise.reject('File not found'))
+                        .then(content => codeEl.textContent = content)
+                        .catch(err => {
+                            codeEl.textContent = `❌ Error loading file:\n${err}\n\n💡 Ensure the file is publicly accessible on GitHub.`;
+                            console.error(err);
+                        });
                 });
+
+                filesContainer.appendChild(fileItem);
+            });
+
+            modal.classList.add('active');
         }
 
         // Close modal
@@ -899,12 +949,30 @@
             }
         });
 
+        // READ BUTTON → Opens file in new tab
+        document.getElementById('read-btn').addEventListener('click', () => {
+            if (currentFileUrl) {
+                window.open(currentFileUrl, '_blank'); // Open in new tab
+            }
+        });
+
+        // DOWNLOAD BUTTON → Downloads file
+        document.getElementById('download-btn').addEventListener('click', () => {
+            if (currentFileUrl) {
+                const a = document.createElement('a');
+                a.href = currentFileUrl;
+                a.download = currentFileName;
+                document.body.appendChild(a);
+                a.click();
+                document.body.removeChild(a);
+            }
+        });
+
         // === INIT ===
         document.addEventListener('DOMContentLoaded', () => {
             type();
             renderProjects();
-            renderContactLinks();
-            renderSkills(); // ✅ Render skills on load
+            renderSkills();
         });
     </script>
 </body>
