--- a/index.html
+++ b/index.html
@@ -697,7 +697,7 @@
             </div>
 
             <!-- ✅ FORMSPREE CONTACT FORM -->
-            <form class="contact-form" action="https://formspree.io/f/YOUR_FORM_ID" method="POST">
+            <form class="contact-form" action="https://formspree.io/f/xdaorqbl" method="POST">
                 <input type="text" name="name" placeholder="Your Name" required />
                 <input type="email" name="email" placeholder="Your Email" required />
                 <textarea name="message" placeholder="Your Message" rows="6" required></textarea>
@@ -977,3 +977,4 @@
     </script>
 </body>
 </html>
+
