--- a/index.html
+++ b/index.html
@@ -716,16 +716,13 @@
                 </div>
             </div>
 
-            <!-- Awards Card -->
+           <!-- Awards Card -->
             <div class="experience-card" style="flex:1;min-width:300px;max-width:400px;">
                 <h3>Awards</h3>
-                <h4>Best Student Project</h4>
-                <p>2024</p>
-                <p>Awarded for the Smart Home Automation System project at Saad Dahlab University.</p>
+                 
                 <hr style="margin:20px 0;border:none;border-top:1px solid rgba(255,255,255,0.1);">
-                <h4>University Scholarship</h4>
-                <p>2023</p>
-                <p>Received for academic excellence in the first year of engineering.</p>
+                <h4>EMPTY</h4>
+                 
             </div>
         </div>
     </section>
@@ -970,4 +967,5 @@
     </script>
 </body>
 </html>
+
 
